Bug 1530706 - IME may be displayed along with the urlbar results panel. r=Standard8 a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D23836

--HG--
extra : source : b20f59942a1ec5067cfa06dad730f7bff27c8f07