browser/components/urlbar/tests/browser/browser_urlbarSearchFunction.js
@@ -30,7 +30,9 @@ add_task(async function init() {
 add_task(async function basic() {
   let resetNotification = enableSearchSuggestionsNotification();
 
+  gURLBar.blur();
   gURLBar.search("basic");
+  ok(gURLBar.hasAttribute("focused"), "url bar is focused");
   await assertUrlbarValue("basic");
 
   assertSearchSuggestionsNotificationVisible(true);
@@ -48,7 +50,10 @@ add_task(async function basic() {
 add_task(async function searchEngineAlias() {
   let resetNotification = enableSearchSuggestionsNotification();
 
-  gURLBar.search("@example");
+  gURLBar.blur();
+  await UrlbarTestUtils.promisePopupOpen(window,
+    () => gURLBar.search("@example"));
+  ok(gURLBar.hasAttribute("focused"), "url bar is focused");
   await assertUrlbarValue("@example");
 
   assertSearchSuggestionsNotificationVisible(false);
@@ -60,13 +65,89 @@ add_task(async function searchEngineAlias() {
   // Open the popup again (by doing another search) to make sure the
   // notification and one-off buttons are shown -- i.e., that we didn't
   // accidentally break them.
-  gURLBar.search("not an engine alias");
+  await UrlbarTestUtils.promisePopupOpen(window,
+    () => gURLBar.search("not an engine alias"));
   await assertUrlbarValue("not an engine alias");
   assertSearchSuggestionsNotificationVisible(true);
   assertOneOffButtonsVisible(true);
 
   await UrlbarTestUtils.promisePopupClose(window, () =>
     EventUtils.synthesizeKey("KEY_Escape"));
+
+  resetNotification();
+});
+
+
+// Calls search() with a restriction character.
+add_task(async function searchRestriction() {
+  let resetNotification = enableSearchSuggestionsNotification();
+
+  gURLBar.blur();
+  await UrlbarTestUtils.promisePopupOpen(window,
+    () => gURLBar.search(UrlbarTokenizer.RESTRICT.SEARCH));
+  ok(gURLBar.hasAttribute("focused"), "url bar is focused");
+  // We always add a whitespace to restrict tokens.
+  await assertUrlbarValue(UrlbarTokenizer.RESTRICT.SEARCH + " ");
+
+  assertSearchSuggestionsNotificationVisible(true);
+  assertOneOffButtonsVisible(false);
+
+  await UrlbarTestUtils.promisePopupClose(window);
+
+  resetNotification();
+});
+
+
+// Calls search() twice with the same value. The popup should reopen.
+add_task(async function searchTwice() {
+  let resetNotification = enableSearchSuggestionsNotification();
+
+  gURLBar.blur();
+  await UrlbarTestUtils.promisePopupOpen(window, () => gURLBar.search("test"));
+  ok(gURLBar.hasAttribute("focused"), "url bar is focused");
+  await assertUrlbarValue("test");
+  assertSearchSuggestionsNotificationVisible(true);
+  assertOneOffButtonsVisible(true);
+  await UrlbarTestUtils.promisePopupClose(window);
+
+  await UrlbarTestUtils.promisePopupOpen(window, () => gURLBar.search("test"));
+  ok(gURLBar.hasAttribute("focused"), "url bar is focused");
+  await assertUrlbarValue("test");
+  assertSearchSuggestionsNotificationVisible(true);
+  assertOneOffButtonsVisible(true);
+  await UrlbarTestUtils.promisePopupClose(window);
+
+  resetNotification();
+});
+
+
+// Calls search() during an IME composition.
+add_task(async function searchIME() {
+  let resetNotification = enableSearchSuggestionsNotification();
+
+  // First run a search.
+  gURLBar.blur();
+  await UrlbarTestUtils.promisePopupOpen(window, () => gURLBar.search("test"));
+  ok(gURLBar.hasAttribute("focused"), "url bar is focused");
+  await assertUrlbarValue("test");
+  // Start composition.
+  await UrlbarTestUtils.promisePopupClose(window,
+    () => EventUtils.synthesizeComposition({ type: "compositionstart" }));
+
+  gURLBar.search("test");
+  // Unfortunately there's no other way to check we don't open the view than to
+  // wait for it.
+  // eslint-disable-next-line mozilla/no-arbitrary-setTimeout
+  await new Promise(resolve => setTimeout(resolve, 1000));
+  ok(!UrlbarTestUtils.isPopupOpen(window), "The panel should still be closed");
+
+  await UrlbarTestUtils.promisePopupOpen(window,
+    () => EventUtils.synthesizeComposition({ type: "compositioncommitasis" }));
+
+  assertSearchSuggestionsNotificationVisible(true);
+  assertOneOffButtonsVisible(true);
+
+  await UrlbarTestUtils.promisePopupClose(window);
 
   resetNotification();
 });
@@ -143,6 +224,11 @@ async function assertUrlbarValue(value) {
   let result = await UrlbarTestUtils.getDetailsOfResultAt(window, 0);
   Assert.equal(result.type, UrlbarUtils.RESULT_TYPE.SEARCH,
     "Should have type search for the first result");
+  // Strip restriction token from value.
+  let restrictTokens = Object.values(UrlbarTokenizer.RESTRICT);
+  if (restrictTokens.includes(value[0])) {
+    value = value.substring(1).trim();
+  }
   Assert.equal(result.searchParams.query, value,
     "Should have the correct query for the first result");
 }
